# iei_data_api

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
iei_data_api/: catalog.py
tests/: test_catalog.py
